--- a/package.json
+++ b/package.json
@@ -17,11 +17,15 @@
     "@react-navigation/stack": "^6.4.0",
     "@reduxjs/toolkit": "^2.2.6",
     "expo": "~51.0.16",
+    "expo-file-system": "^17.0.1",
+    "expo-image-picker": "~15.0.7",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.74.2",
+    "react-native-safe-area-context": "^4.10.8",
+    "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
     "react-redux": "^9.1.2"
   },
