--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "expo": "~51.0.16",
     "expo-file-system": "^17.0.1",
     "expo-image-picker": "~15.0.7",
+    "expo-location": "^17.0.1",
     "expo-status-bar": "~1.12.1",
     "moment": "^2.30.1",
     "react": "18.2.0",
